# penknife

./: ABOUT.md  Cargo.toml  README.md  justfile
.github/workflows/: audit.yml  check-and-lint.yaml  ci.yml  release.yml  style.yaml  test.yml
crates/gist-rs/: Cargo.toml
crates/gist-rs/src/: auth.rs  backend.rs  client.rs  error.rs  lib.rs  types.rs
crates/penknife/: Cargo.toml
crates/penknife-backend/: Cargo.toml  README.md
crates/penknife-backend/src/: lib.rs
crates/penknife-gdoc/: Cargo.toml
crates/penknife-gdoc/src/: auth.rs  backend.rs  client.rs  error.rs  lib.rs
crates/penknife-gist/: Cargo.toml  README.md
crates/penknife-gist/src/: auth.rs  backend.rs  client.rs  error.rs  types.rs
crates/penknife/src/: cli.rs  config.rs  error.rs  event.rs  fsutil.rs  gdoc.rs  git.rs  glyphs.rs  hydrate.rs  main.rs  markdown.rs  picker.rs  remote.rs  replace.rs  scanner.rs  store.rs  sync.rs  sync_apply.rs
crates/penknife/src/app/: files.rs  gist.rs  keys.rs  mod.rs  publish.rs  test_support.rs  view.rs
crates/penknife/src/ui/: dialogs.rs  diff.rs  keybar.rs  mod.rs  preview.rs  tree.rs
crates/wm/: Cargo.toml
crates/wm/src/: app.rs  config.rs  error.rs  event.rs  gdoc.rs  git.rs  glyphs.rs  hydrate.rs  main.rs  picker.rs  remote.rs  replace.rs  scanner.rs  store.rs  sync.rs  sync_apply.rs
crates/wm/src/app/: files.rs  gist.rs  keys.rs  mod.rs  view.rs
crates/wm/src/ui/: dialogs.rs  diff.rs  input.rs  keybar.rs  mod.rs  preview.rs  tree.rs
gist-rs/: Cargo.toml
gist-rs/src/: auth.rs  client.rs
wm/: Cargo.toml
wm/src/: app.rs  config.rs  event.rs  gdoc.rs  hydrate.rs  main.rs  scanner.rs  store.rs  sync.rs
wm/src/ui/: dialogs.rs  diff.rs  input.rs  mod.rs  preview.rs  tree.rs
