[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jhheider/penknife"
authors = ["Jacob Heider <jhheider@gmail.com>"]

[workspace.dependencies]
chrono = "0.4"
reqwest = "0.13.4"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
wiremock = "0.6"
