[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jhheider/penknife"
authors = ["Jacob Heider <jhheider@gmail.com>"]
rust-version = "1.88"
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1"
chrono = "0.4"
reqwest = { version = "0.13.4", default-features = false, features = ["charset", "http2", "rustls-no-provider", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
wiremock = "0.6"
