[package]
name = "wm"
version = "0.1.0"
edition = "2024"

[dependencies]
gist-rs = { path = "../gist-rs" }
ratatui = "0.30"
crossterm = "0.29"
tui-tree-widget = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sha2 = "0.10"
similar = "2"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
color-eyre = "0.6"
reqwest = { version = "0.13", features = ["json"] }
