[package]
name = "gist-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
