[package]
name = "gist-rs"
description = "GitHub Gist API client with retry, rate-limit, and pagination handling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
wiremock = { workspace = true }
