[package]
name = "penknife-backend"
description = "Backend contract for penknife: publish and sync documents to remote services"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
