[package]
name = "penknife-gdoc"
description = "Google Docs publish backend for penknife via the Drive API's markdown conversion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
penknife-backend = { path = "../penknife-backend" }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "form"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
