[package]
name = "penknife-gist"
description = "GitHub Gist API client with retry, rate-limit, and pagination handling"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
penknife-backend = { path = "../penknife-backend", version = "0.2.1" }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
wiremock = { workspace = true }
