[package]
name = "penknife"
description = "Git-style remotes for your documents: publish a folder of markdown to Gists and more, and track every copy for drift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["tui", "markdown", "gist", "notes", "sync"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
penknife-backend = { path = "../penknife-backend" }
penknife-gist = { path = "../penknife-gist" }
penknife-gdoc = { path = "../penknife-gdoc" }
ratatui = "0.30"
crossterm = "0.29"
tui-tree-widget = "0.24"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dirs = "6"
hex = "0.4"
sha2 = "0.11"
similar = "3"
arboard = "3"
htmd = "0.5"
open = "5"
nucleo-matcher = "0.3"
trash = "5"
toml = "1.1"
globset = "0.4"
unicode-width = "0.2"
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
color-eyre = "0.6"
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }
